--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100&family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
 
+.card{
+  height: 300px;
+}
+
+.card-hovered{
+  height: 450px;
+  background-color: #053742;
+}
+
 
 * {
   box-sizing: border-box;
